--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>goit-js-hw-12</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+   <section class="section-form">
+  <form class="form">
+        <label for="search"></label>
+          <input
+            type="text"
+            name="search"
+            class="search-input"
+            placeholder="Search images..."
+          />
+        </label>
+        <button type="submit" class="btn">Start</button>
+      </form>
+      
+<span class="loader"></span>
+      <ul class="gallery"></ul>
+      <button class="load-more-btn" type="button">Load more</button>
+</section>
 
     <script type="module" src="./main.js"></script>
   </body>
